--- a/spinwheelapp/templates/base.html
+++ b/spinwheelapp/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}Spin & Win{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+      @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css');
       canvas {
         max-width: 100%;
         height: auto;
@@ -12,6 +13,7 @@
         margin: auto;
       }
     </style>
+    
     {% block extra_head %}{% endblock %}
 </head>
 <body>
